Corrected shell container text alignment

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -53,7 +53,7 @@ h3 {
 	position:relative;
 	width:1088px;
 	margin:0 auto;
-	text-align:center;
+	text-align:left;
 	/*
 	overflow:hidden;
 	*/
